crates/monkey-lang/src/parsing/snapshots/parser/ok/expr_prefix_bang.snap
---
source: crates/monkey-lang/src/parsing/tests.rs
expression: actual
input_file: crates/monkey-lang/src/parsing/snapshots/parser/ok/expr_prefix_bang.mk

---
Ok(
    File {
        stmts: [
            Expr(
                StmtExpr {
                    expr: Infix(
                        ExprInfix {
                            lhs: Lit(
                                Num(
                                    LitNum {
                                        num: Number {
                                            token: Token {
                                                span: Span {
                                                    start: 0,
                                                    end: 3,
                                                },
                                                kind: Number,
                                                text: "324",
                                            },
                                        },
                                        value: 324.0,
                                    },
                                ),
                            ),
                            token: Token {
                                span: Span {
                                    start: 4,
                                    end: 5,
                                },
                                kind: Plus,
                                text: "+",
                            },
                            op: Add,
                            rhs: Infix(
                                ExprInfix {
                                    lhs: Prefix(
                                        ExprPrefix {
                                            token: Token {
                                                span: Span {
                                                    start: 6,
                                                    end: 7,
                                                },
                                                kind: Bang,
                                                text: "!",
                                            },
                                            op: LogicalNot,
                                            rhs: Lit(
                                                Bool(
                                                    LitBool {
                                                        token: Token {
                                                            span: Span {
                                                                start: 7,
                                                                end: 11,
                                                            },
                                                            kind: TrueKw,
                                                            text: "true",
                                                        },
                                                        value: true,
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                    token: Token {
                                        span: Span {
                                            start: 11,
                                            end: 12,
                                        },
                                        kind: Caret,
                                        text: "^",
                                    },
                                    op: Power,
                                    rhs: Lit(
                                        Num(
                                            LitNum {
                                                num: Number {
                                                    token: Token {
                                                        span: Span {
                                                            start: 12,
                                                            end: 14,
                                                        },
                                                        kind: Number,
                                                        text: "10",
                                                    },
                                                },
                                                value: 10.0,
                                            },
                                        ),
                                    ),
                                },
                            ),
                        },
                    ),
                    semi: Semicolon {
                        token: Token {
                            span: Span {
                                start: 14,
                                end: 15,
                            },
                            kind: Semicolon,
                            text: ";",
                        },
                    },
                },
            ),
        ],
    },
)
